<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item android:id="@+id/action_navigation"
        android:title="@string/action_navigation"
        android:text="@string/action_navigation"
        android:orderInCategory="3"
        app:showAsAction="always|withText"
        android:actionLayout="@drawable/ic_action_next" />
    <item android:id="@+id/action_navigation2"
        android:title="@string/action_navigation2"
        android:gravity="center_horizontal"
        app:showAsAction="always|withText"
        android:orderInCategory="1" />
    <item android:id="@+id/action_navigation3"
        android:title="@string/action_navigation3"
        android:gravity="center_horizontal"
        app:showAsAction="always|withText"
        android:orderInCategory="2" />
    <item android:id="@+id/action_navigation4"
        android:title="@string/action_navigation4"
        android:titleCondensed="@string/action_navigation4"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="always|withText" />

</menu>